// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`menuSelect Lifecycle render renders correctly 1`] = `
{
  "cssClasses": {
    "noRefinementRoot": "ais-MenuSelect--noRefinement",
    "option": "ais-MenuSelect-option",
    "root": "ais-MenuSelect",
    "select": "ais-MenuSelect-select",
  },
  "items": [
    {
      "label": "foo",
      "value": undefined,
    },
    {
      "label": "bar",
      "value": undefined,
    },
  ],
  "refine": [Function],
  "templateProps": {
    "templates": {
      "defaultOption": "See all",
      "item": "{{label}} ({{#helpers.formatNumber}}{{count}}{{/helpers.formatNumber}})",
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "defaultOption": false,
      "item": false,
    },
  },
}
`;

exports[`menuSelect Lifecycle render renders transformed items correctly 1`] = `
{
  "cssClasses": {
    "noRefinementRoot": "ais-MenuSelect--noRefinement",
    "option": "ais-MenuSelect-option",
    "root": "ais-MenuSelect",
    "select": "ais-MenuSelect-select",
  },
  "items": [
    {
      "label": "foo",
      "transformed": true,
      "value": undefined,
    },
    {
      "label": "bar",
      "transformed": true,
      "value": undefined,
    },
  ],
  "refine": [Function],
  "templateProps": {
    "templates": {
      "defaultOption": "See all",
      "item": "{{label}} ({{#helpers.formatNumber}}{{count}}{{/helpers.formatNumber}})",
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "defaultOption": false,
      "item": false,
    },
  },
}
`;
